@@ -70,17 +70,27 @@ public class IperfApplication {
         String udpCommand;
 
         if(direction == "Upload"){
-            udpCommand = "/system/bin/iperf3 -c 192.168.1.2 -u -t 10 -b 20M -i 1";
+            udpCommand = "/system/bin/iperf3 -c 192.168.153.96 -u -t 10 -b 20M -i 1";
         }else{
-            udpCommand = "/system/bin/iperf3 -c 192.168.1.2 -u -t 10 -b 100M -i 1 -R";
+            udpCommand = "/system/bin/iperf3 -c 192.168.153.96 -u -t 10 -b 100M -i 1 -R";
         }
         try {
             // Executa o cliente UDP e captura a saída
             Log.d("Running Iperf", "Initialing ...");
             // Crie um processo para executar o Iperf3
-            Process udpProcess = Runtime.getRuntime().exec(udpCommand);
+            ProcessBuilder processBuilder = new ProcessBuilder("sh", "-c" ,udpCommand);
+            Process udpProcess = processBuilder.start();
+
+            BufferedReader errorReader = new BufferedReader(new InputStreamReader(udpProcess.getErrorStream()));
+            String errorLine;
+            while ((errorLine = errorReader.readLine()) != null) {
+                Log.e("Iperf Client Error", errorLine);
+            }
+            errorReader.close();
+
             BufferedReader udpReader = new BufferedReader(new InputStreamReader(udpProcess.getInputStream()));
             String udpLine;
+
             while ((udpLine = udpReader.readLine()) != null) {
                 Log.d("Iperf Client", udpLine);
                 if(udpLine.contains("Mbits/sec")){
